--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=h1, initial-scale=1.0">
 	<link rel="stylesheet" href="css/style.css">
-	<title>домашнее задание 2</title>
+	<title>Stay on the saddle!</title>
 </head>
 <body>
 <div class="wrapper">
